...
    loginState: LoginState,
    onChange: (LoginState) -> Unit,
    viewModel: LoginViewModel,
    navigateToFullName: () -> Unit,
) {
    OutlinedTextField(
        modifier = Modifier.testTag("EmailInput"),
        value = loginState.email,
        onValueChange = { onChange(loginState.copy(email = it)) },
        keyboardOptions = KeyboardOptions(
            keyboardType = KeyboardType.Email, imeAction = ImeAction.Next
        ),
        singleLine = true,
...
        })
    if (loginState.emailError?.isNotEmpty() == true) {
        ErrorMessage(loginState.emailError)
    }
    Spacer(modifier = Modifier.padding(5.dp))
    OutlinedTextField(
        modifier = Modifier.testTag("PasswordInput"),
        value = loginState.password,
        onValueChange = { onChange(loginState.copy(password = it)) },
        keyboardOptions = KeyboardOptions(
            keyboardType = KeyboardType.Password, imeAction = ImeAction.Next
        ),
        singleLine = true,
...
