...
     * @author Ömer Aynaci
     * @param statusCode the response status code
     * @return an instance of RegistrationValidation
     */
    private fun getRegistrationResult(statusCode: Int): RegistrationResult<String> {
        return when (statusCode) {
            409 -> RegistrationResult.EmailAlreadyExists("Email Already exists")
            else -> RegistrationResult.UnknownError("Oops something went wrong, try again later")
        }
    }
}
