...
            value = input.email,
            onValueChange = { email ->
                onValueChange(input.copy(email = email))
            },
            modifier = Modifier
                .padding(top = 30.dp)
                .testTag("EmailAddress"),
            label = { EmailAddressLabel() },
            supportingText = { EmailAlreadyExistsErrorMessage(registrationError = registrationError) })
        EmailErrorMessage(
            email = input.email,
            error = registrationViewModel.getRegistrationError().emailError
        )
...
